crates/sql-orm/tests/ui/dbcontext_invalid_field_type.stderr
error: DbContext requiere campos con tipo DbSet<Entidad>
  --> tests/ui/dbcontext_invalid_field_type.rs:13:16
   |
13 |     pub users: User,
   |                ^^^^
