crates/sql-orm/tests/ui/dbcontext_invalid_field_type.rs
use sql_orm::prelude::*;

#[derive(Entity, Debug, Clone)]
#[orm(table = "users")]
struct User {
    #[orm(primary_key)]
    #[orm(identity)]
    id: i64,
}

#[derive(DbContext, Debug, Clone)]
struct AppDbContext {
    pub users: User,
}

fn main() {}
